--- a/next-frontend-v1/package.json
+++ b/next-frontend-v1/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "start:web": "pnpm --filter=web start",
+    "start:docs": "pnpm --filter=docs start",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
