--- a/nest-backend-v1/docker-compose.yaml
+++ b/nest-backend-v1/docker-compose.yaml
@@ -10,6 +10,10 @@ services:
     env_file:
       - ./apps/auth/.env
 
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
 networks:
   default:
     name: picture-network
