--- a/nest-backend-v1/package.json
+++ b/nest-backend-v1/package.json
@@ -30,9 +30,11 @@
     "prisma:migrate:auth": "npx prisma migrate deploy --schema prisma/auth/schema.prisma"
   },
   "dependencies": {
+    "@golevelup/nestjs-modules": "^0.8.0",
     "@nestjs/common": "^10.4.19",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.10.1",
